[package]
name = "qanah"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A WebRTC-based VPN that uses WireGuard configuration files, secured with ChaCha20-Poly1305 and X25519 key exchange"
repository = "https://github.com/xlmnxp/qanah"
homepage = "https://github.com/xlmnxp/qanah"
keywords = ["vpn", "webrtc", "wireguard", "tunnel", "p2p"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.11"
tun = { version = "0.7", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
bytes = "1"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1.1.9"
libc = "0.2.182"
rumqttc = { version = "0.25.1", default-features = false }
sha2 = "0.10.9"
futures = "0.3.32"
